[gd_scene load_steps=11 format=3 uid="uid://c2b6u12mmk86v"]

[ext_resource type="Texture2D" uid="uid://byqripm2g0jmw" path="res://Assets/message/Im.png" id="1_hkjyl"]
[ext_resource type="Script" uid="uid://ckrrxijmkjj23" path="res://level_32.gd" id="1_nqncd"]
[ext_resource type="Texture2D" uid="uid://61bxpm6r1gnc" path="res://Assets/message/mom1.png" id="3_gljg1"]
[ext_resource type="Texture2D" uid="uid://c4cguq0cp585q" path="res://Assets/message/mom2.png" id="4_cjchw"]
[ext_resource type="Texture2D" uid="uid://u3ghx8kd7wu1" path="res://Assets/message/mom3.png" id="5_gf287"]
[ext_resource type="Texture2D" uid="uid://d14w3uo0ip2qq" path="res://Assets/message/mom4.png" id="6_s5qbm"]
[ext_resource type="Texture2D" uid="uid://bd6bmjm00t88g" path="res://Assets/message/errrr.png" id="7_owcbv"]
[ext_resource type="Texture2D" uid="uid://ba8vwxnmuu4f4" path="res://Assets/message/errrr....png" id="8_p6bc7"]
[ext_resource type="Texture2D" uid="uid://kf3et4vya1un" path="res://Assets/message/kim.png" id="9_h2gdm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqncd"]
size = Vector2(624, 666)

[node name="level_32" type="Node2D"]
script = ExtResource("1_nqncd")

[node name="Im" type="Sprite2D" parent="."]
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("1_hkjyl")

[node name="Im2" type="Sprite2D" parent="."]
position = Vector2(48, -96)
scale = Vector2(1.0156, 1.24923)
texture = ExtResource("1_hkjyl")

[node name="Label" type="Label" parent="."]
offset_left = 296.0
offset_top = 208.0
offset_right = 673.0
offset_bottom = 309.0
scale = Vector2(1.41607, 1.52429)
text = "I pondered and pondered on what to do for this. 
This was the second last one that I did.
I still don't know about it.
Right side moves on"

[node name="Mom1" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("3_gljg1")

[node name="Mom2" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("4_cjchw")

[node name="Mom3" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("5_gf287")

[node name="Mom4" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("6_s5qbm")

[node name="Errrr" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("7_owcbv")

[node name="Errrr___" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("8_p6bc7")

[node name="Kim" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("9_h2gdm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(840, 323)
shape = SubResource("RectangleShape2D_nqncd")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
